# Bolmate-Vocabulary-Coach

./: .gitignore  README.md  docker-compose.yml
bolmate-base-core/: .env.example  Dockerfile  Makefile  README.md  entrypoint.sh  example.ini  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
bolmate-base-core/alembic/: env.py  script.py.mako
bolmate-base-core/alembic/versions/: 0001_create_users.py  202411010001_flashcards_quiz.py  20250223_000001_create_users.py  279e6de8b321_initial_setup.py  7e7d7b6b0f1e_flashcards_and_quiz_models.py
bolmate-base-core/app/: __init__.py
bolmate-base-core/app/db/: __init__.py  session.py
bolmate-base-core/app/models/: __init__.py  flashcard.py  interpret_job.py  quiz.py  user.py
bolmate-base-core/app/routes/: __init__.py  flashcards.py  interpret.py  languages.py  quiz.py  users.py
bolmate-base-core/app/schemas/: __init__.py  flashcard.py  interpret.py  language.py  quiz.py
bolmate-base-core/app/services/: __init__.py  ai.py  openai_service.py
bolmate-base-core/config/: settings.py
bolmate-base-core/db/: __init__.py
bolmate-base-core/models/: user.py
bolmate-base-core/routes/: __init__.py  users.py
bolmate-base-core/scripts/: entrypoint.sh
bolmate-base-core/services/: users_service.py
bolmate-base-core/src/bolmate_base/: __init__.py
bolmate-base-core/src/bolmate_base/core/: database.py  routes.py  settings.py
bolmate-base-core/src/bolmate_base/model/: __init__.py  base_model.py  example_model.py
bolmate-base-core/src/bolmate_base/service/: example_service.py
bolmate-base-core/src/bolmate_base/view/: example_view.py
bolmate-base-core/tests/: conftest.py  test_routes.py
bolmate-base-front/: .env.example  .eslintrc.json  .prettierrc.json  Dockerfile  README.md  index.html  index.tpl  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
bolmate-base-front/src/: App.tsx  (+5 more)
(+41 files in other folders)
