[project]
name = "bolmate_base"
version = "0.0.1"
description = "Bolamte base backend"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Dave van Rijn Development", email = "develop@davevanrijn.nl" }]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "waitress==3.0.2",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://gitlab.com/bolmate/bolmate-base"

[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"