[project]
name = "bolmate_base"
version = "0.1.0"
description = "Bolmate base Flask backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Bolmate", email = "dev@example.com" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://gitlab.com/bolmate/bolmate-base"

[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"
